# UsbMicrophone

./: .gitmodules  CMakeLists.txt  README.md  wch-riscv.cfg
Dependencies/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/FreeRtosBlink/: CMakeLists.txt  main.cpp
Tests/NoosBlink/: CMakeLists.txt  main.cpp
Tests/TinyusbUsbMicrophone4Elements/: CMakeLists.txt
Tests/TinyusbUsbMicrophone4ElementsNoos/: CMakeLists.txt
UsbMicrophone/: CMakeLists.txt  family.c  main.cpp
UsbMicrophone/Config/: CMakeLists.txt  FreeRTOSConfig.h  tusb_config.h
UsbMicrophone/Platform/: CMakeLists.txt
UsbMicrophone/Platform/Core/: core_riscv.h
UsbMicrophone/Platform/FreeRTOS/: CMakeLists.txt
UsbMicrophone/Platform/Peripheral/inc/: ch32v30x_eth.h
UsbMicrophone/Platform/Startup/: startup_ch32v30x_D8C.S
UsbMicrophone/TinyUsb/: CMakeLists.txt  usb_descriptors.c
